# talk

./: .gitignore  README.md
2022-meeting-cpp/: .gitignore  Makefile  convert-console.py  main.tex
2022-meeting-cpp/demos/: AdvancedExpectations.cpp  Asio.cpp  Base.h  CMakeLists.txt  ConversionAfter.cpp  ConversionBefore.cpp  DataDriven.cpp  Distance.cpp  ExpectAttempt.cpp  ExpectAttemptMain.h  ExpectCached.cpp  ExpectEvaluation.cpp  ExpectIntro.cpp  ExpectIntrospection.cpp  Intro-listing.cpp  Intro.cpp  Limitations.cpp  Observer.cpp  Overview.cpp
2022-meeting-cpp/img/: attempt0.drawio  attempt1.drawio  cached.drawio  deepl.eps  evaluation.drawio  github.eps  mastodon.eps  qr.eps  stackoverflow.eps
2022-meeting-cpp/style/: all.tex  colors.tex  commands.tex  include.tex  layout.tex  packages.tex  pkg-lstlinebg.tex
